Fix header issue on mobile screens
Header h1 wrapped to next line on small screens.

--- a/Freelancing.css
+++ b/Freelancing.css
@@ -21,7 +21,7 @@ header {
 header h1 {
     margin:1.5rem auto 0 auto;
     color: white;
-    font-size: 2.5em;
+    font-size: 2.1em;
 }
 
 header img {
